<resources>
    <!-- Titres fragment -->
    <string name="start_recording">Record Tracks</string>


    <string name="app_name">SanTour</string>
    <string name="google_maps_key">AIzaSyCjv9bDs81moFlsCCn8kh4L_Y216XF6_jI</string>
    <string name="check_location_activity">Error: Please check that your location is activated</string>
    <string name="application_close">Closing the application</string>
    <string name="track_lost_message">Are you sure you want to quit the application. Your current track will be lost !</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="Input_Poi_Name">Write name of point interest</string>
    <string name="Input_Pod_Name">Write name of point Difficulty</string>
    <string name="inputGps">GPS</string>
    <string name="labelvaluesgps">values gps</string>
    <string name="input_description">write a descritpion</string>
    <string name="input_description_pod">write a description for the pod</string>
    <string name="btn_save">save</string>
    <string name="labeldescritpion">Description</string>
    <string name="trackName">Name of track</string>
    <string name="TitlePod">POD</string>
    <string name="TitlePoi">POI</string>
    <string name="addPOD">Add POD</string>
    <string name="addPOI">Add POI</string>
    <string name="distance">Distance</string>
    <string name="TitleTime">Time</string>
    <string name="nbKM">TextView</string>
    <string name="btn_savePodDetails">Save</string>
    <string name="save_track_confirmation_title">Saving the track</string>
    <string name="save_track_confirmation_text">Are you sure you want to finish the record ?</string>
    <string name="addNamePOD">Please add a name for the POD</string>
    <string name="addDescriptionPOD">Please add a description for the POD</string>
    <string name="addPicturePOD">Please add a picture for the POD</string>
    <string name="addNamePOI">Please add a name for the POI</string>
    <string name="addDescriptionPOI">Please add a description for the POI</string>
    <string name="addPicturePOI">Please add a picture for the POI</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liste_pois">Liste POIs</string>
    <string name="liste_pods">Liste PODs</string>
    <string name="StartRecordingFirst">Please start recording first</string>
    <string name="CreatePODFirst">Please create a POD first</string>
    <string name="CreatePOIFirst">Please create a POI first</string>
    <string name="santour">SanTour</string>
    <string name="create_track">Create track</string>
    <string name="settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="save">Save</string>

    <string name="waiting">Please wait...</string>
    <string name="loading">Loading</string>

    <string name="choice_picture_title">How do you want to import an image</string>
    <string name="choice_picture_message">Camera or import from gallery</string>
    <string name="choice_picture_camera">Camera</string>
    <string name="choice_picture_gallery">Gallery</string>
    <string name="NameTrackFirst">Please give a name to the track first</string>
    <string name="saveTrackFirst">Please save your track first !</string>
    <string name="trackSaved">The track has been successfully saved !</string>
    <string name="youAreHere">You are here</string>
    <string name="mail">Mail</string>
    <string name="enterValidMail">Please enter a valid address mail</string>
    <string name="enterPassword">Please enter a password</string>
    <string name="userNotFound">User not found</string>
    <string name="Home">Home</string>
    <string name="Login">Login</string>
    <string name="Recording">Record tracks</string>
    <string name="about">About</string>
    <string name="gpsDisabled">Le GPS est inactif, voulez-vous l\'activer ?</string>
    <string name="activateGPS">Activer GPS</string>
    <string name="notActivateGPS">Ne pas l\'activer</string>
    <string name="AllTracks">My tracks</string>
    <string name="myTracks">My tracks</string>
    <string name="list_pod">List POD</string>
    <string name="list_poi">List POI</string>
    <string name="dur_e">Durée</string>

    <string name="noPOI">There is no POI for this track</string>
    <string name="noPOD">There is no POD for this track</string>
    <string name="longitude">Longitude :</string>
    <string name="latitude">Latitude :</string>
    <string name="txt_settingLanguage">Select your language</string>
    <string name="txt_aboutpage">SanTour est une application de tracker. Autrement dit, elle permet d\'enregistrer les parcours avec les points intéressant ou inversément les points de diffcultés que vous pouvez croiser. Ces trajets enregistrés serviront à alimenter des applications qui utiliseront ces données pour mettre à disposition de nouveaux trajets</string>
    <string name="noPOIForThisTrack">There\'s no POI for this track</string>
    <string name="noPODForTrack">There\'s no POD for this track</string>
    <string name="difficulties">Difficulties</string>
    <string name="descriptionPOD">Description Pod</string>
    <string name="namePOD">NamePod</string>
    <string name="walk">Walk</string>
    <string name="bike">Bike</string>
    <string name="racket">Racket</string>
    <string name="roller">Roller</string>
    <string name="chooseType">Choose the type of the record</string>

</resources>
