<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.group3.santour.Activity.com.example.group3.santour.Fragment.Poi_Fragment">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="480dp">

            <TextView
                android:id="@+id/label_valuesGpsLattitude"
                android:layout_width="150dp"
                android:layout_height="39dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/label_valuesGpsLongitude"
                app:layout_constraintEnd_toEndOf="@+id/input_NamePoi"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/label_valuesGpsLongitude"
                app:layout_constraintTop_toBottomOf="@+id/imageButton"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="UnknownId" />

            <EditText
                android:id="@+id/input_NamePoi"
                android:textColor="@color/grey_dark"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/Input_Poi_Name"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="350dp"
                android:layout_height="160dp"
                android:layout_marginTop="8dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="@+id/input_NamePoi"
                app:layout_constraintHorizontal_bias="0.294"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/input_NamePoi"
                app:layout_constraintTop_toBottomOf="@+id/input_NamePoi" />

            <TextView
                android:id="@+id/label_valuesGpsLongitude"
                android:layout_width="150dp"
                android:layout_height="36dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/input_NamePoi"
                app:layout_constraintTop_toBottomOf="@+id/imageButton" />

            <EditText
                android:id="@+id/input_descriptinPoi"
                android:textColor="@color/grey_dark"
                android:layout_width="340dp"
                android:layout_height="69dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/input_description"
                android:lines="2"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/btn_save"
                app:layout_constraintEnd_toEndOf="@+id/input_NamePoi"
                app:layout_constraintStart_toStartOf="@+id/input_NamePoi"
                app:layout_constraintTop_toBottomOf="@+id/label_valuesGpsLongitude" />

            <Button
                android:id="@+id/btn_save"
                android:background="@color/red_main"
                android:layout_width="124dp"
                android:layout_height="49dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="108dp"
                android:layout_marginRight="144dp"
                android:layout_marginStart="108dp"
                android:text="@string/btn_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/input_descriptinPoi"
                tools:ignore="UnknownId" />


            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="29dp"
                android:layout_height="34dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@android:drawable/ic_input_add"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>
