<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.group3.santour.Activity.Record_Fragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/NameTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/trackName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="205dp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ButtonPause"
            android:layout_alignStart="@+id/ButtonPause"
            android:layout_below="@+id/ButtonPause"
            android:layout_marginEnd="50dp"
            android:src="@android:drawable/ic_menu_save"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="425dp"
            android:layout_marginRight="50dp" />

        <TextView
            android:id="@+id/TitlePOD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageButtonAddPOD"
            android:layout_marginEnd="250dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/imageButtonAddPOD"
            android:layout_toRightOf="@+id/imageButtonAddPOD"
            android:text="@string/TitlePod"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ButtonAddPOD"
            tools:ignore="MissingConstraints,UnknownId"
            tools:layout_editor_absoluteY="381dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="250dp" />

        <TextView
            android:id="@+id/TitlePOI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageButtonAddPOI"
            android:layout_alignLeft="@+id/NameTrack"
            android:layout_alignStart="@+id/NameTrack"
            android:layout_marginEnd="250dp"
            android:layout_marginStart="8dp"
            android:text="@string/TitlePoi"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ButtonAddPOI"
            tools:layout_editor_absoluteY="294dp"
            tools:ignore="MissingConstraints,UnknownId"
            android:layout_marginRight="250dp"
            android:layout_marginLeft="8dp" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/Map"
            android:layout_width="236dp"
            android:layout_height="170dp"
            android:layout_alignEnd="@+id/TitlePOI"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/TitlePOI"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/NameTrack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ButtonPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ButtonPlay"
            android:layout_alignStart="@+id/ButtonPlay"
            android:layout_below="@+id/ButtonPlay"
            android:layout_marginEnd="50dp"
            android:src="@android:drawable/ic_media_pause"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="350dp" />

        <ImageButton
            android:id="@+id/ButtonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/TitlePOI"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/common_google_play_services_enable_button"
            android:src="@android:drawable/ic_media_play"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="274dp"
            android:layout_marginRight="50dp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ButtonAddPOI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="285dp"
            android:layout_marginLeft="24dp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ButtonAddPOD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ButtonAddPOI"
            android:layout_marginLeft="24dp" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>
